--- a/src/front/css/layout.css
+++ b/src/front/css/layout.css
@@ -2,3 +2,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#menu {
+    height: 814px;
+}
+#navbar-h {
+    height: 96px;
+}
+.sedgwick-ave-display-regular {
+    font-family: "Sedgwick Ave Display", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
