añadida route en Layout de NavBar y Login, se customizan colores en tailwind.config.js

--- a/src/front/css/layout.css
+++ b/src/front/css/layout.css
@@ -6,6 +6,11 @@
 #menu {
     height: 814px;
 }
+#menu-login {
+    margin-top: 34px;
+    right: -84px;
+    height: 814px;
+}
 #navbar-h {
     height: 96px;
 }
