Se genera un nuevo navbar funcional, a falta del olvide contraseña, con sus diferentes componentes

--- a/src/api/templates/active_account.html
+++ b/src/api/templates/active_account.html
@@ -1,44 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cuenta Activada</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 0;
-            padding: 0;
-            background-color: #f2f2f2;
-        }
-        .container {
-            margin-top: 100px;
-        }
-        h1 {
-            font-size: 36px;
-            color: #333;
-        }
-        img {
-            width: 200px;
-            margin-bottom: 20px;
-        }
+      body {
+        font-family: Arial, sans-serif;
+        text-align: center;
+        margin: 0;
+        padding: 0;
+        background-color: #f2f2f2;
+      }
+      .container {
+        margin-top: 100px;
+      }
+      h1 {
+        font-size: 36px;
+        color: #333;
+      }
+      img {
+        width: 200px;
+        margin-bottom: 20px;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1>Cuenta Activada</h1>
-        <p>Estás siendo redirigido a la página de login.</p>
+      <h1>Cuenta Activada</h1>
+      <p>Estás siendo redirigido a la página de login.</p>
     </div>
-</body>
+  </body>
 </html>
 
-  
-  <script>
-    // Redirigir después de 5 segundos
-    setTimeout(function() {
-      window.location.href = 'http://localhost:5173/Login';
-    }, 5000); // 5000 milisegundos = 5 segundos
-  </script>
-  
-
+<script>
+  // Redirigir después de 5 segundos
+  setTimeout(function () {
+    window.location.href = "http://localhost:5173/";
+  }, 5000); // 5000 milisegundos = 5 segundos
+</script>
