--- a/src/front/css/styles.css
+++ b/src/front/css/styles.css
@@ -192,7 +192,7 @@ body {
     padding: 1.5rem;
 }
 
-/* Footer
+Footer
 footer .main-logo {
     width: 15rem;
 }
@@ -210,9 +210,9 @@ footer .main-logo {
     display: flex;
 }
 
-footer .social-links img {
-    width: 3rem;
-    height: 3rem;
+/* footer .social-links img {
+    width: 2rem;
+    height: 2rem;
 } */
 
 .avatar {
