prueba despues de recuperar datos

--- a/src/api/templates/new_password.html
+++ b/src/api/templates/new_password.html
@@ -14,14 +14,35 @@
         }
         .container {
             margin-top: 100px;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            display: inline-block;
         }
         h1 {
             font-size: 36px;
             color: #333;
         }
+        p {
+            font-size: 16px;
+            color: #666;
+        }
         img {
             width: 200px;
             margin-bottom: 20px;
+        }
+        .redirect-button {
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .redirect-button:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
@@ -30,15 +51,14 @@
         <h1>Clave modificada.</h1>
         <p>Te hemos mandado la nueva clave a tu bandeja de entrada.</p>
         <p>Estás siendo redirigido a la página de login.</p>
+        <p>Si no eres redirigido automáticamente, haz clic en el botón a continuación.</p>
+        <a href="http://localhost:5173/Login" class="redirect-button">Ir a la página de login</a>
     </div>
+    <script>
+        // Redirigir después de 5 segundos
+        setTimeout(function() {
+            window.location.href = 'http://localhost:5173/Login';
+        }, 5000); // 5000 milisegundos = 5 segundos
+    </script>
 </body>
 </html>
-
-  
-  <script>
-    // Redirigir después de 5 segundos
-    setTimeout(function() {
-      window.location.href = 'http://localhost:5173/Login';
-    }, 5000); // 5000 milisegundos = 5 segundos
-  </script>
-  
