se actualiza para que se use la contraseña segura

--- a/src/api/templates/confirm_account.html
+++ b/src/api/templates/confirm_account.html
@@ -44,9 +44,9 @@
     <p>
       Si tienes alguna pregunta o necesitas ayuda, no dudes en ponerte en
       contacto con nuestro equipo de soporte a través de
-      <a href="mailto:help@carrotflix.com">help@carrotflix.com</a>.
+      <a href="mailto:help@cocinaextrema.es">help@cocinaextrema.es</a>.
     </p>
     <p>Atentamente,</p>
-    <p>Equipo de CarrotFlix.</p>
+    <p>Equipo de Cocina Extrema.</p>
   </body>
 </html>
