--- a/src/api/templates/forgot_password.html
+++ b/src/api/templates/forgot_password.html
@@ -37,11 +37,11 @@
   <p>
     Por favor, si necesitas ayuda o tienes alguna pregunta, no dudes en
     contactar con nuestro equipo de soporte a través de
-    <a href="mailto:help@carrotflix.com">help@carrotflix.com</a>. Estaremos
+    <a href="mailto:help@cocinaextrema.es">help@cocinaextrema.es</a>. Estaremos
     encantados de ayudarte.
   </p>
   <p>Gracias por confiar en nosotros.</p>
   <p>Atentamente,</p>
-  <p>El equipo de CarrotFlix.</p>
+  <p>El equipo de Cocina Extrema.</p>
 </body>
 </html>
