--- a/src/api/templates/set_new_password.html
+++ b/src/api/templates/set_new_password.html
@@ -45,6 +45,14 @@
         button:hover {
             background-color: #0056b3;
         }
+        .error {
+            color: red;
+            font-size: 14px;
+        }
+        .valid {
+            color: green;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
@@ -52,14 +60,20 @@
         <h1>Restablecer Contraseña</h1>
         <form id="resetPasswordForm">
             <input type="password" id="new_password" placeholder="Nueva Contraseña" required>
+            <div id="password-validation"></div>
             <button type="submit">Restablecer Contraseña</button>
         </form>
     </div>
     <script>
+        document.getElementById('new_password').addEventListener('input', validatePassword);
         document.getElementById('resetPasswordForm').addEventListener('submit', async (e) => {
             e.preventDefault();
             const newPassword = document.getElementById('new_password').value;
-            const token = "{{ token }}"; // Usando Jinja para inyectar el token
+            if (!validatePassword(newPassword)) {
+                alert("La contraseña introducida no es segura");
+                return;
+            }
+            const token = "{{ token }}";
             const response = await fetch(`/new_password/${token}`, {
                 method: 'POST',
                 headers: {
@@ -77,6 +91,36 @@
                 alert(result.error);
             }
         });
+
+        function validatePassword() {
+            const password = document.getElementById('new_password').value;
+            const validationDiv = document.getElementById('password-validation');
+            validationDiv.innerHTML = '';
+
+            const requirements = [
+                { regex: /(?=.*[a-z])/, message: 'At least one lowercase letter', isValid: false },
+                { regex: /(?=.*[A-Z])/, message: 'At least one uppercase letter', isValid: false },
+                { regex: /(?=.*[0-9])/, message: 'At least one number', isValid: false },
+                { regex: /[!"#$%&'()*+,-./:;<=>?@[\\\]^_`{|}~¡¢£¤¥¦§¨©ª«¬®¯°±²³´µ¶·¸¹º»¼½¾¿×÷Ç]/, message: 'At least one special character', isValid: false },
+                { regex: /(?=.{8,})/, message: 'At least 8 characters', isValid: false }
+            ];
+
+            let allValid = true;
+
+            requirements.forEach(req => {
+                const valid = req.regex.test(password);
+                const reqDiv = document.createElement('div');
+                reqDiv.textContent = req.message;
+                reqDiv.className = valid ? 'valid' : 'error';
+                validationDiv.appendChild(reqDiv);
+                req.isValid = valid;
+                if (!valid) {
+                    allValid = false;
+                }
+            });
+
+            return allValid;
+        }
     </script>
 </body>
 </html>
