--- a/src/api/templates/new_password.html
+++ b/src/api/templates/new_password.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -61,4 +61,4 @@
         }, 5000); // 5000 milisegundos = 5 segundos
     </script>
 </body>
-</html>
+</html> -->
